--- a/conf/train/mixervsr_iterative_refinement_kaggle.yaml
+++ b/conf/train/mixervsr_iterative_refinement_kaggle.yaml
@@ -22,8 +22,17 @@ monitor:
 
 callbacks:
   - _target_: pytorch_lightning.callbacks.EarlyStopping
+    patience: 400
+    verbose: False
+    monitor: ${train.monitor.metric}
+    mode: ${train.monitor.mode}
 
   - _target_: pytorch_lightning.callbacks.ModelCheckpoint
+    save_top_k: 1
+    verbose: False
+    monitor: ${train.monitor.metric}
+    mode: ${train.monitor.mode}
+    save_last: True
 
 logger:
   _target_: pytorch_lightning.loggers.WandbLogger
