--- a/conf/default.yaml
+++ b/conf/default.yaml
@@ -6,6 +6,6 @@ core:
 
 defaults:
   - hydra: default.yaml
-  - nn: default.yaml
-  - train: default.yaml
+  - nn: mixervsr_iterative_refinement_kaggle.yaml
+  - train: mixervsr_iterative_refinement_kaggle.yaml
   - _self_
