--- a/conf/train/mixervsr_iterative_refinement_kaggle.yaml
+++ b/conf/train/mixervsr_iterative_refinement_kaggle.yaml
@@ -4,7 +4,7 @@ deterministic: False
 
 trainer:
   devices: 1
-  accelerator: gpu
+  accelerator: cpu
   precision: 32
   max_epochs: 1500
   accumulate_grad_batches: 1
