--- a/conf/nn/mixervsr_iterative_refinement_kaggle.yaml
+++ b/conf/nn/mixervsr_iterative_refinement_kaggle.yaml
@@ -4,7 +4,7 @@ data:
   datasets:
     train:
       _target_: vsr.data.dataset.DatasetSR
-      path: "~/hdd/vsr/REDS/000"
+      path: "/home/aghinassi/hdd/vsr/REDS/000"
       split: "train"
       size: 0.9
       hr_augmentation:
@@ -67,7 +67,7 @@ data:
 
     val:
       _target_: vsr.data.dataset.DatasetSR
-      path: "~/hdd/vsr/REDS/000"
+      path: "/home/aghinassi/hdd/vsr/REDS/000"
       split: "val"
       size: 0.1
       hr_augmentation:
