--- a/conf/train/mixervsr_iterative_refinement_kaggle.yaml
+++ b/conf/train/mixervsr_iterative_refinement_kaggle.yaml
@@ -4,13 +4,12 @@ deterministic: False
 
 trainer:
   devices: 1
-  accelerator: cpu
-  precision: 32
-  max_epochs: 1500
+  accelerator: mps
+  precision: bf16-mixed
+  max_epochs: 2
   accumulate_grad_batches: 1
   num_sanity_val_steps: 2
   gradient_clip_val: 10.0
-  val_check_interval: 1.0
   deterministic: ${train.deterministic}
 
 restore:
