--- a/conf/train/mixervsr_pretrain.yaml
+++ b/conf/train/mixervsr_pretrain.yaml
@@ -11,6 +11,7 @@ trainer:
   num_sanity_val_steps: 2
   gradient_clip_val: 10.0
   deterministic: ${train.deterministic}
+  strategy: ddp
 
 restore:
   ckpt_or_run_path: null
