--- a/conf/train/mixervsr_pretrain.yaml
+++ b/conf/train/mixervsr_pretrain.yaml
@@ -5,7 +5,7 @@ deterministic: False
 trainer:
   devices: 2
   accelerator: gpu
-  precision: bf16-mixed
+  precision: 16-mixed
   max_epochs: 2
   accumulate_grad_batches: 1
   num_sanity_val_steps: 2
