--- a/conf/train/mixervsr_pretrain_ws.yaml
+++ b/conf/train/mixervsr_pretrain_ws.yaml
@@ -5,7 +5,7 @@ deterministic: False
 trainer:
   devices: 1
   accelerator: gpu
-  precision: 16-mixed
+  precision: 16
   max_epochs: 2
   accumulate_grad_batches: 1
   num_sanity_val_steps: 2
