--- a/conf/default.yaml
+++ b/conf/default.yaml
@@ -5,7 +5,7 @@ core:
   tags: null
 
 defaults:
-  - hydra: default.yaml
-  - nn: mixervsr_pretrain.yaml
-  - train: mixervsr_pretrain.yaml
+  - hydra: default
+  - nn: default
+  - train: default
   - _self_
