--- a/conf/default.yaml
+++ b/conf/default.yaml
@@ -1,6 +1,6 @@
 core:
   project_name: 'video-super-resolution'
-  storage_dir: ${oc.env:PROJECT_ROOT}/core
+  storage_dir: ${oc.env:LOGGING_DIR}
   version: 0.0.1
   tags: null
 
