--- a/conf/train/mixervsr_pretrain.yaml
+++ b/conf/train/mixervsr_pretrain.yaml
@@ -7,6 +7,7 @@ trainer:
   accelerator: gpu
   precision: 16-mixed
   max_epochs: 1500
+  max_steps: 100000
   accumulate_grad_batches: 4
   num_sanity_val_steps: 2
   gradient_clip_val: 10.0
