--- a/conf/nn/realbasic/realbasic_pretrain.yaml
+++ b/conf/nn/realbasic/realbasic_pretrain.yaml
@@ -113,6 +113,14 @@ module:
     _target_: core.losses.WL1Loss
     weight: 1.0
 
+  of_loss:
+    _target_: core.losses.OpticalFlowConsistency
+    weight: 1.0
+    model:
+      _target_: optical_flow.modules.pwcnet.PWCNet
+      md: 4
+      pretrained: ${oc.env:PROJECT_ROOT}/src/optical_flow/weights/pwc_net.pth.tar
+
   metric:
     _target_: torchmetrics.MetricCollection
     metrics:
