--- a/conf/train/realbasic/baby_realbasic.yaml
+++ b/conf/train/realbasic/baby_realbasic.yaml
@@ -3,7 +3,7 @@ seed_index: 0
 deterministic: False
 
 trainer:
-  devices: 2
+  devices: 1
   accelerator: gpu
   precision: 16-mixed
   max_epochs: 1500
@@ -11,10 +11,10 @@ trainer:
   accumulate_grad_batches: 4
   num_sanity_val_steps: 2
   deterministic: ${train.deterministic}
-  strategy: deepspeed_stage_3_offload
+  strategy: null #deepspeed_stage_3_offload
 
 restore:
-  ckpt_or_run_path: null
+  ckpt_path: null
 
 monitor:
   metric: 'loss/val'
@@ -22,7 +22,7 @@ monitor:
 
 callbacks:
   - _target_: pytorch_lightning.callbacks.EarlyStopping
-    patience: 500
+    patience: 1000
     verbose: False
     monitor: ${train.monitor.metric}
     mode: ${train.monitor.mode}
@@ -33,6 +33,8 @@ callbacks:
     monitor: ${train.monitor.metric}
     mode: ${train.monitor.mode}
     save_last: True
+
+  - _target_: lightning.pytorch.callbacks.ModelSummary
 
 logger:
   _target_: pytorch_lightning.loggers.WandbLogger
