--- a/conf/nn/realbasic/baby_realbasic.yaml
+++ b/conf/nn/realbasic/baby_realbasic.yaml
@@ -147,11 +147,13 @@ module:
     weight_decay: 0
 
   scheduler:
-    _target_: pl_bolts.optimizers.lr_scheduler.LinearWarmupCosineAnnealingLR
-    warmup_epochs: 100
-    max_epochs: ${train.trainer.max_epochs}
-    warmup_start_lr: 1e-6
-    eta_min: 1e-6
+    _target_: core.schedulers.CosineAnnealingWarmupRestarts
+    first_cycle_steps: 2000
+    cycle_mult: 1.0
+    max_lr: 1e-4
+    min_lr: 1e-6
+    warmup_steps: 500
+    gamma: 0.8
 
   log_interval: 250
   log_k_images: 5
