--- a/conf/nn/realbasic/kid_realbasic.yaml
+++ b/conf/nn/realbasic/kid_realbasic.yaml
@@ -119,7 +119,7 @@ module:
     _target_: vsr.modules.realbasicvsr.RealBasicVSR
     cleaning_blocks: 10
     mid_channels: 64
-    upscale: ${nn.data.datasets.train.scale}
+    upscale: ${nn.data.data.train.scale}
     is_mirror: False
     res_blocks: 10
 
