--- a/test_conf/train/default.yaml
+++ b/test_conf/train/default.yaml
@@ -10,6 +10,6 @@ monitor:
   mode: 'min'
 
 defaults:
-  trainer: default
-  callbacks: default
-  logger: wandb
+  - trainer: default
+  - callbacks: default
+  - logger: wandb
