--- a/conf_test/config/nn/data/reds_ws.yaml
+++ b/conf_test/config/nn/data/reds_ws.yaml
@@ -1,7 +1,7 @@
 _target_: vsr.data.datamodule.DataModuleVSR
 num_workers: 0
 batch_size: 4
-prefetch_factor: null
+prefetch_factor: 2
 datasets:
   train:
     _target_: vsr.data.dataset.DatasetVSR
