--- a/conf_test/config/hydra/default.yaml
+++ b/conf_test/config/hydra/default.yaml
@@ -11,9 +11,8 @@ job:
     WANDB_START_METHOD: thread
     WANDB_DIR: ${oc.env:LOGGING_DIR}
 
-defaults:
-  - override job_logging: disabled
-  - override hydra_logging: disabled
+job_logging: disabled
+hydra_logging: disabled
 
 runtime:
   version: "1.3"
