--- a/conf_test/cfg/nn/data/reds_ws.yaml
+++ b/conf_test/cfg/nn/data/reds_ws.yaml
@@ -75,11 +75,11 @@ datasets:
         size: [ 64, 64 ]
 
   val:
-    _target_: ${nn.data.datasets.train._target_}
-    path: ${nn.data.datasets.train.path}
+    _target_: ${cfg.nn.data.datasets.train._target_}
+    path: ${cfg.nn.data.datasets.train.path}
     split: "val"
-    seq: ${nn.data.datasets.train.seq}
-    scale: ${nn.data.datasets.train.scale}
+    seq: ${cfg.nn.data.datasets.train.seq}
+    scale: ${cfg.nn.data.datasets.train.scale}
     size: 0.1
     hr_augmentation:
       - _target_: kornia.augmentation.RandomCrop
