--- a/conf_test/cfg/train/callbacks/default.yaml
+++ b/conf_test/cfg/train/callbacks/default.yaml
@@ -1,14 +1,14 @@
 - _target_: pytorch_lightning.callbacks.EarlyStopping
   patience: 1000
   verbose: False
-  monitor: ${train.monitor.metric}
-  mode: ${train.monitor.mode}
+  monitor: ${cfg.train.monitor.metric}
+  mode: ${cfg.train.monitor.mode}
 
 - _target_: pytorch_lightning.callbacks.ModelCheckpoint
   save_top_k: 1
   verbose: False
-  monitor: ${train.monitor.metric}
-  mode: ${train.monitor.mode}
+  monitor: ${cfg.train.monitor.metric}
+  mode: ${cfg.train.monitor.mode}
   save_last: True
 
 - _target_: pytorch_lightning.callbacks.ModelSummary
