--- a/conf_test/cfg/train/trainer/deepspeed.yaml
+++ b/conf_test/cfg/train/trainer/deepspeed.yaml
@@ -5,5 +5,5 @@ max_epochs: 2
 max_steps: 100000
 accumulate_grad_batches: 2
 num_sanity_val_steps: 2
-deterministic: ${train.deterministic}
+deterministic: ${cfg.train.deterministic}
 strategy: deepspeed_stage_3_offload
