--- a/conf_test/cfg/train/default.yaml
+++ b/conf_test/cfg/train/default.yaml
@@ -13,6 +13,7 @@ strategy:
   _target_: pytorch_lightning.strategies.DeepSpeedStrategy
   stage: 3
   load_full_weights: True
+  offload_optimizer: cpu
 
 defaults:
   - trainer: default
