--- a/conf_test/cfg/train/callbacks/default.yaml
+++ b/conf_test/cfg/train/callbacks/default.yaml
@@ -6,6 +6,7 @@
 
 - _target_: pytorch_lightning.callbacks.ModelCheckpoint
   save_top_k: 1
+  dirpath: ${oc.env:LOGGING_DIR}
   filename: "best"
   verbose: False
   monitor: ${cfg.train.monitor.metric}
