--- a/conf_test/cfg/train/default.yaml
+++ b/conf_test/cfg/train/default.yaml
@@ -3,7 +3,7 @@ seed_index: 0
 deterministic: False
 
 restore:
-  ckpt_path: "/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/ltkflmx0/checkpoints/best.ckpt/checkpoint/"
+  ckpt_path: "/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/ltkflmx0/checkpoints/best.ckpt"
 
 monitor:
   metric: 'loss/val'
