--- a/conf_test/cfg/baby_realbasic.yaml
+++ b/conf_test/cfg/baby_realbasic.yaml
@@ -1,7 +1,7 @@
 core:
   project_name: 'video-super-resolution'
   storage_dir: ${oc.env:LOGGING_DIR}
-  run_name: 'default'
+  run_id: 'default'
   version: 0.0.1
   tags: null
 
