--- a/conf_test/cfg/train/logger/default.yaml
+++ b/conf_test/cfg/train/logger/default.yaml
@@ -2,5 +2,5 @@ _target_: pytorch_lightning.loggers.WandbLogger
 project: ${core.project_name}
 save_dir: ${oc.env:LOGGING_DIR}
 log_model: True
-name: ${core.run_name}
+id: ${core.run_id}
 tags: ${core.tags}
