added Loss Pipeline class, modified configuration structure

--- a/conf_test/cfg/nn/module/distillation.yaml
+++ b/conf_test/cfg/nn/module/distillation.yaml
@@ -17,6 +17,6 @@ metric:
 
 defaults:
   - model: baby_realbasic
-  - loss: pixel_loss
+  - loss: distillation_loss
   - optimizer: adam
   - scheduler: cosine_warmup
