--- a/conf_test/cfg/nn/module/scheduler/cosine_warmup.yaml
+++ b/conf_test/cfg/nn/module/scheduler/cosine_warmup.yaml
@@ -1,7 +1,11 @@
 _target_: core.schedulers.CosineAnnealingWarmupRestarts
 first_cycle_steps: 2000
 cycle_mult: 1.0
-max_lr: 1e-4
-min_lr: 1e-6
+max_lrs:
+  - ${cfg.nn.module.optimizer.lr}
+  - 1e-5
+min_lrs:
+  - 1e-6
+  - 1e-7
 warmup_steps: 500
 gamma: 0.8
