--- a/conf_test/cfg/train/default.yaml
+++ b/conf_test/cfg/train/default.yaml
@@ -3,18 +3,15 @@ seed_index: 0
 deterministic: False
 
 restore:
-  ckpt_path: "/home/aghinassi/Desktop/nn-lab/storage/video-super-resolution/ltkflmx0/checkpoints/best.ckpt"
+  ckpt_path: null
 
 monitor:
   metric: 'loss/val'
   mode: 'min'
 
-strategy:
-  _target_: pytorch_lightning.strategies.DeepSpeedStrategy
-  stage: 3
-  offload_optimizer: cpu
-
 defaults:
   - trainer: default
   - callbacks: default
   - logger: default
+  - strategy: default
+
