--- a/conf_test/cfg/baby_realbasic.yaml
+++ b/conf_test/cfg/baby_realbasic.yaml
@@ -3,9 +3,9 @@ defaults:
   - nn: default
   - train: default
   - override nn/module/model: baby_realbasic
-  - override nn/module/optimizer: ${core.strategy}
+  - override nn/module/optimizer: ${master.core.strategy}
   - override nn/module/scheduler: cosine_warmup
-  - override train/trainer: ${core.strategy}
-  - override train/strategy: ${core.strategy}
+  - override train/trainer: ${master.core.strategy}
+  - override train/strategy: ${master.core.strategy}
   - override nn/data: reds_diag
   - _self_
