--- a/conf_test/cfg/baby_realbasic.yaml
+++ b/conf_test/cfg/baby_realbasic.yaml
@@ -3,9 +3,9 @@ defaults:
   - nn: default
   - train: default
   - override nn/module/model: baby_realbasic
-  - override nn/module/optimizer: ${.strategy}
+  - override nn/module/optimizer: ${strategy}
   - override nn/module/scheduler: cosine_warmup
-  - override train/trainer: ${.strategy}
-  - override train/strategy: ${.strategy}
+  - override train/trainer: ${strategy}
+  - override train/strategy: ${strategy}
   - override nn/data: reds_diag
   - _self_
