--- a/conf_test/default.yaml
+++ b/conf_test/default.yaml
@@ -1,2 +1,9 @@
+core:
+  project_name: 'video-super-resolution'
+  run_id: 'default'
+  storage_dir: ${oc.env:LOGGING_DIR}
+  version: 0.0.1
+  tags: null
+
 defaults:
   - cfg: default
