--- a/conf_test/cfg/nn/module/model/realbasic.yaml
+++ b/conf_test/cfg/nn/module/model/realbasic.yaml
@@ -1,6 +1,6 @@
 _target_: vsr.modules.realbasicvsr.RealBasicVSR
 cleaning_blocks: 20
 mid_channels: 64
-upscale: ${master.cfg.nn.data.datasets.train.scale}
+upscale: ${cfg.nn.data.datasets.train.scale}
 is_mirror: True
 res_blocks: 20
