--- a/conf_test/cfg/nn/module/scheduler/cosine.yaml
+++ b/conf_test/cfg/nn/module/scheduler/cosine.yaml
@@ -1,4 +1,4 @@
 _target_: torch.optim.lr_scheduler.CosineAnnealingLR
-T_max: ${master.cfg.train.trainer.max_epochs}
+T_max: ${cfg.train.trainer.max_epochs}
 eta_min: 0
 verbose: False
