--- a/conf_test/cfg/train/logger/default.yaml
+++ b/conf_test/cfg/train/logger/default.yaml
@@ -1,6 +1,6 @@
 _target_: pytorch_lightning.loggers.WandbLogger
-project: ${core.project_name}
+project: ${cfg.core.project_name}
 save_dir: ${oc.env:LOGGING_DIR}
 log_model: True
-id: ${core.run_id}
-tags: ${core.tags}
+id: ${cfg.core.run_id}
+tags: ${cfg.core.tags}
