--- a/conf_test/cfg/nn/module/distillation.yaml
+++ b/conf_test/cfg/nn/module/distillation.yaml
@@ -2,9 +2,13 @@ _target_: vsr.pl_module.pl_module.LitVSR
 log_interval: 250
 log_k_images: 5
 
+distillation: True
+
 group_lr:
   group: "spynet"
-  lr: [1e-5, 1e-4]
+  lr:
+    - 1e-5
+    - 1e-4
 
 metric:
   _target_: core.metrics.MetricCollection
@@ -17,6 +21,6 @@ metric:
 
 defaults:
   - model: baby_realbasic
-  - loss: distillation_loss
+  - loss: flow_loss
   - optimizer: adam
   - scheduler: cosine_warmup
