--- a/config/cfg/baby_rbvsr_distillation.yaml
+++ b/config/cfg/baby_rbvsr_distillation.yaml
@@ -1,6 +1,6 @@
 core:
   project_name: 'video-super-resolution'
-  run_id: 'default'
+  run_id: 'baby_rbvsr_distillation'
   storage_dir: ${oc.env:LOGGING_DIR}
   version: 0.0.1
   tags: null
@@ -9,6 +9,7 @@ defaults:
   - hydra: default
   - nn: default
   - train: default
+  - override nn/module: distillation
   - override nn/module/optimizer: deepspeed
   - override train/trainer: deepspeed
   - override train/strategy: deepspeed
