--- a/config/cfg/baby_rbvsr_flow.yaml
+++ b/config/cfg/baby_rbvsr_flow.yaml
@@ -1,6 +1,6 @@
 core:
   project_name: 'video-super-resolution'
-  run_id: 'default'
+  run_id: 'baby_rbvsr_flow'
   storage_dir: ${oc.env:LOGGING_DIR}
   version: 0.0.1
   tags: null
@@ -9,9 +9,10 @@ defaults:
   - hydra: default
   - nn: default
   - train: default
-  - override nn/module: distillation
   - override nn/module/optimizer: deepspeed
+  - override nn/module/loss: flow_loss
   - override train/trainer: deepspeed
   - override train/strategy: deepspeed
   - override nn/data: reds_diag
+  - override nn.module.filter_params: True
   - _self_
