--- a/config/cfg/nn/module/scheduler/cosine.yaml
+++ b/config/cfg/nn/module/scheduler/cosine.yaml
@@ -1,4 +1,4 @@
 _target_: torch.optim.lr_scheduler.CosineAnnealingLR
 T_max: ${cfg.train.trainer.max_epochs}
-eta_min: 0
+eta_min: 1e-6
 verbose: False
