--- a/config/cfg/nn/module/scheduler/cosine_warmup.yaml
+++ b/config/cfg/nn/module/scheduler/cosine_warmup.yaml
@@ -1,11 +1,6 @@
 _target_: core.schedulers.CosineAnnealingWarmupRestarts
 first_cycle_steps: 2000
 cycle_mult: 1.0
-max_lrs:
-  - ${cfg.nn.module.group_lr.lr[0]}
-  - ${cfg.nn.module.group_lr.lr[1]}
-min_lrs:
-  - 1e-7
-  - 1e-6
+min_lrs_pow: 2
 warmup_steps: 500
 gamma: 0.8
