--- a/config/cfg/baby_rbvsr.yaml
+++ b/config/cfg/baby_rbvsr.yaml
@@ -5,6 +5,8 @@ core:
   version: 0.0.1
   tags: null
 
+override nn.module.filter_params: True
+
 defaults:
   - hydra: default
   - nn: default
@@ -12,5 +14,4 @@ defaults:
   - override nn/module/optimizer: deepspeed
   - override train/trainer: deepspeed
   - override train/strategy: deepspeed
-  - override nn.module.filter_params: True
   - _self_
