--- a/config/cfg/train/logger/default.yaml
+++ b/config/cfg/train/logger/default.yaml
@@ -3,4 +3,5 @@ project: ${cfg.core.project_name}
 save_dir: ${oc.env:LOGGING_DIR}
 log_model: True
 id: ${cfg.core.run_id}
+name: ${cfg.core.run_name}
 tags: ${cfg.core.tags}
