--- a/config/cfg/baby_rbvsr_distillation.yaml
+++ b/config/cfg/baby_rbvsr_distillation.yaml
@@ -1,6 +1,7 @@
 core:
   project_name: 'video-super-resolution'
   run_id: 'baby_rbvsr_distillation'
+  run_name: "Baby Real Basic - Distilled Pretrain"
   storage_dir: ${oc.env:LOGGING_DIR}
   version: 0.0.1
   tags: null
