--- a/config/cfg/baby_rbvsr_gan.yaml
+++ b/config/cfg/baby_rbvsr_gan.yaml
@@ -1,7 +1,7 @@
 core:
   project_name: 'video-super-resolution'
-  run_id: 'baby_rbvsr'
-  run_name: "Baby Real Basic - Pretrain"
+  run_id: 'baby_rbvsr_gan'
+  run_name: "Baby Real Basic - Finetune"
   storage_dir: ${oc.env:LOGGING_DIR}
   version: 0.0.1
   tags: null
@@ -10,6 +10,7 @@ defaults:
   - hydra: default
   - nn: default
   - train: default
+  - override nn/module: gan
   - override nn/module/optimizer: deepspeed
   - override train/trainer: deepspeed
   - override train/strategy: deepspeed
