Testing GAN module

--- a/config/cfg/baby_rbvsr_gan.yaml
+++ b/config/cfg/baby_rbvsr_gan.yaml
@@ -11,7 +11,7 @@ defaults:
   - nn: default
   - train: default
   - override nn/module: gan
-  - override nn/module/optimizer: deepspeed
+  - override nn/module/optimizer: gan_deepspeed
   - override train/trainer: deepspeed
   - override train/strategy: deepspeed
   - _self_
