--- a/config/cfg/baby_rbvsr_gan.yaml
+++ b/config/cfg/baby_rbvsr_gan.yaml
@@ -6,6 +6,8 @@ core:
   version: 0.0.1
   tags: null
 
+override train.trainer.accumulate_grad_batches: null
+
 defaults:
   - hydra: default
   - nn: default
