--- a/config/cfg/baby_rbvsr_gan.yaml
+++ b/config/cfg/baby_rbvsr_gan.yaml
@@ -6,7 +6,7 @@ core:
   version: 0.0.1
   tags: null
 
-override nn.data.batch_size: 4
+override cfg.nn.data.batch_size: 2
 
 defaults:
   - hydra: default
