--- a/config/cfg/train/trainer/default.yaml
+++ b/config/cfg/train/trainer/default.yaml
@@ -1,7 +1,7 @@
 devices: 1
 accelerator: gpu
 precision: 16
-max_epochs: 2
-accumulate_grad_batches: 1
+max_steps: 50
+accumulate_grad_batches: 2
 num_sanity_val_steps: 2
 deterministic: ${cfg.train.deterministic}
