--- a/config_test/experiment/baby_rbvsr.yaml
+++ b/config_test/experiment/baby_rbvsr.yaml
@@ -7,10 +7,10 @@ core:
   tags: null
 
 defaults:
-  - hydra@_here_: default
-  - nn@_here_: default
-  - train@_here_: default
-  - override nn/module/optimizer@config_test: deepspeed
-  - override train/trainer@config_test: deepspeed
-  - override train/strategy@config_test: deepspeed
+  - hydra@_global_: default
+  - nn@_global_: default
+  - train@_global_: default
+  - override nn/module/optimizer@_global_: deepspeed
+  - override train/trainer@_global_: deepspeed
+  - override train/strategy@_global_: deepspeed
   - _self_
