--- a/config_test/experiment/baby_rbvsr.yaml
+++ b/config_test/experiment/baby_rbvsr.yaml
@@ -4,10 +4,10 @@ core:
   run_name: "Baby Real Basic - Pretrain"
 
 defaults:
-  - override hydra: default
-  - override nn: default
-  - override train: default
-  - override nn/module/optimizer: deepspeed
-  - override train/trainer: deepspeed
-  - override train/strategy: deepspeed
+  - override /hydra: default
+  - override /nn: default
+  - override /train: default
+  - override /nn/module/optimizer: deepspeed
+  - override /train/trainer: deepspeed
+  - override /train/strategy: deepspeed
   - _self_
