--- a/config_test/experiment/baby_rbvsr.yaml
+++ b/config_test/experiment/baby_rbvsr.yaml
@@ -5,6 +5,7 @@ core:
   run_name: "Baby Real Basic - Pretrain"
 
 defaults:
+  - override /hydra: default
   - override /nn/module/optimizer: deepspeed
   - override /train/trainer: deepspeed
   - override /train/strategy: deepspeed
