--- a/conf/nn/data/reds_diag.yaml
+++ b/conf/nn/data/reds_diag.yaml
@@ -28,14 +28,13 @@ datasets:
         same_on_batch: True
         keepdim: True
 
-    lr_augmentation:
-      - _target_: kornia.augmentation.RandomGaussianBlur
-        kernel_size: 7
-        sigma: [ 0.2, 3 ]
-        same_on_batch: False
-        p: 0.8
+      - _target_: kornia.augmentation.RandomSharpness
+        sharpness: 0.3
+        same_on_batch: True
         keepdim: True
+        p: 1.0
 
+    lr_augmentation:
       - _target_: core.augmentations.RandomJPEGCompression
         quality: [ 30, 90 ]
 
@@ -53,23 +52,22 @@ datasets:
         keepdim: True
         p: 0.7
 
-      - _target_: kornia.augmentation.RandomGaussianBlur
-        kernel_size: 5
-        sigma: [ 0.2, 3 ]
+      - _target_: kornia.augmentation.RandomSharpness
+        sharpness: 0.7
         same_on_batch: False
         keepdim: True
         p: 0.7
 
       - _target_: core.augmentations.RandomJPEGCompression
-        quality: [ 30, 70 ]
+        quality: [ 30, 90 ]
+
+      - _target_: kornia.augmentation.Resize
+        size: [ 64, 64 ]
 
       - _target_: core.augmentations.RandomVideoCompression
         codec: [ 'libx264', 'h264', 'mpeg4' ]
         crf: [ 30, 40 ]
         fps: [ 15, 30 ]
-
-      - _target_: kornia.augmentation.Resize
-        size: [ 64, 64 ]
 
   val:
     _target_: ${nn.data.datasets.train._target_}
@@ -91,19 +89,21 @@ datasets:
 
     lr_augmentation:
       - _target_: kornia.augmentation.RandomGaussianBlur
-        kernel_size: 5
+        kernel_size: 3
         keepdim: True
         sigma: [ 0.2, 3 ]
         same_on_batch: True
         p: 0.7
+
+      - _target_: kornia.augmentation.Resize
+        size: [ 64, 64 ]
 
       - _target_: core.augmentations.RandomVideoCompression
         codec: [ 'libx264', 'h264', 'mpeg4' ]
         crf: [ 30, 40 ]
         fps: [ 15, 30 ]
 
-      - _target_: kornia.augmentation.Resize
-        size: [ 64, 64 ]
+
 
 num_workers: 16
 batch_size: 4
