--- a/conf/experiment/baby_rbvsr.yaml
+++ b/conf/experiment/baby_rbvsr.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 core:
   run_id: 'baby_rbvsr'
-  run_name: "Baby Real Basic - Pretrain"
+  run_name: "Baby Real Basic - Default Pretrain"
 
 defaults:
   - override /nn/module/optimizer: deepspeed
