--- a/conf/train/trainer/deepspeed.yaml
+++ b/conf/train/trainer/deepspeed.yaml
@@ -1,6 +1,7 @@
 devices: 2
 accelerator: gpu
 precision: 16-mixed
-max_steps: 28
+max_steps: 200000
+min_steps: 80000
 num_sanity_val_steps: 2
 deterministic: ${train.deterministic}
