--- a/conf/train/trainer/default.yaml
+++ b/conf/train/trainer/default.yaml
@@ -1,7 +1,8 @@
 devices: 1
 accelerator: gpu
 precision: 16
-max_steps: 50
+max_steps: 200000
+min_steps: 80000
 accumulate_grad_batches: 2
 num_sanity_val_steps: 2
 deterministic: ${train.deterministic}
